feat(auth): add user auth feature using jwt
